--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Easy-to-use error reporting & error code generation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/nyc ./node_modules/.bin/mocha test/index.js && ./node_modules/.bin/nyc report --reporter=clover"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,10 @@
   },
   "bin": {
     "tter-generate-list": "./generate-error-list.js"
+  },
+  "devDependencies": {
+    "clover": "0.0.1",
+    "co-mocha": "^1.2.2",
+    "nyc": "^11.4.1"
   }
 }
