This should work according to scrutinizer

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,17 +1,19 @@
 build:
   environment:
     node: '8.9.4'
+  tests:
+    override:
+      - command: 'npm test'
+        coverage:
+          file: 'coverage/clover.xml'
+          format: 'clover'
   nodes:
+    tests: true
     analysis:
       tests:
-        override:
-          - js-scrutinizer-run
-    tests:
       override:
-        - command : 'npm test'
-          coverage:
-            file  : 'coverage/clover.xml'
-            format: 'clover'
+      - js-scrutinizer-run
+
 
 checks:
   javascript:
